--- a/index.html
+++ b/index.html
@@ -20,69 +20,69 @@
             <tr>
                 <td>Task1</td>
                 <td>
-                    <a href="./Task1.html">Link1</a>
+                    <a href="./task1.html">Link1</a>
                 </td>
                 <tr>
                     <td>Task2</td>
                     <td>
-                        <a href="./Task2.html">Link2</a>
+                        <a href="./task2.html">Link2</a>
                     </td>
                     <tr>
                         <td>Task3</td>
                         <td>
-                            <a href="./Task3.html">Link3</a>
+                            <a href="./task3.html">Link3</a>
                         </td>
                     </tr>
                     <tr>
                         <td>Task4</td>
                         <td>
-                            <a href="./Task4.html">Link1</a>
+                            <a href="./task4.html">Link1</a>
                         </td>
                         <tr>
                             <td>Task5</td>
                             <td>
-                                <a href="./Task5.html">Link2</a>
+                                <a href="./task5.html">Link2</a>
                             </td>
                             <tr>
                                 <td>css_Task1</td>
                                 <td>
-                                    <a href="./css_Task1.html">Link3</a>
+                                    <a href="./task1css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task2</td>
                                 <td>
-                                    <a href="./css_Task2.html">Link3</a>
+                                    <a href="./task2css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task3</td>
                                 <td>
-                                    <a href="./css_Task3.html">Link3</a>
+                                    <a href="./task3css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task4</td>
                                 <td>
-                                    <a href="./css_Task4.html">Link3</a>
+                                    <a href="./task4css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task5</td>
                                 <td>
-                                    <a href="./css_Task5.html">Link3</a>
+                                    <a href="./task5css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task6</td>
                                 <td>
-                                    <a href="./css_Task6.html">Link3</a>
+                                    <a href="./task6css.html">Link3</a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>css_Task7</td>
                                 <td>
-                                    <a href="./css_Task7.html">Link3</a>
+                                    <a href="./task7css.html">Link3</a>
                                 </td>
                             </tr>
 
